@@ -1,6 +1,6 @@
-Date: 2020-07-10
+Date: 2020-07-11
 Package: CHNOSZ
-Version: 1.3.6-28
+Version: 1.3.6-29
 Title: Thermodynamic Calculations and Diagrams for Geochemistry
 Authors@R: c(
     person("Jeffrey", "Dick", , "j3ffdick@gmail.com", role = c("aut", "cre"),
